--- a/vercel.json
+++ b/vercel.json
@@ -12,13 +12,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/client/build/$1"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "dest": "/client/build/index.html"
     }
   ]
 }
